# SDL_raycaster

./: .ccls  .gitignore  .travis.yml  CMakeLists.txt  README.md  desc.txt  generate_test_framework.sh  shell.nix  version.txt
include/: gmat.h  gvec.h  libraycaster.h  map.h
src/main/: CMakeLists.txt
src/main/math/: CMakeLists.txt  gmat.cpp  gmat.h  gvec.cpp  gvec.h
src/test/: CMakeLists.txt  run_tests.cpp
src/test/math/: math_tests.cpp
tests/: CMakeLists.txt  run_tests.cpp
tests/math/: math_tests.cpp
